tests/baselines/reference/inferReadonlyGenericAsTuple.errors.txt
tests/cases/compiler/inferReadonlyGenericAsTuple.ts(9,14): error TS2339: Property 'length' does not exist on type 'string | number'.
  Property 'length' does not exist on type 'number'.


==== tests/cases/compiler/inferReadonlyGenericAsTuple.ts (1 errors) ====
    function compute<TS extends readonly unknown[]>(
      sources: TS,
      func: (...args: TS) => number,
    ): number {
      return func(...sources);
    }
    
    compute(["abc", 123], (str, num) => {
      return str.length + num;
                 ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'string | number'.
!!! error TS2339:   Property 'length' does not exist on type 'number'.
    });
    